Test: Adicionando classes DataPool para Produto, ProdutoFiltro, ProdutoFiltroDTO e ProdutoRespostaDTO.